[project]


# GENERAL INFO
# ============

name = 'Aitomatic-Contrib'

keywords = [
  'Aitomatic',
  'contrib',
]

readme = {file = 'README.md', content-type = 'text/markdown', charset = 'UTF-8'}


# AUTHOR(S)/MAINTAINER(S) & LICENSE
# =================================

authors = [
  {name = 'Aitomatic, Inc.', email = 'engineering@aitomatic.com'},
]
maintainers = [
  {name = 'Aitomatic, Inc.', email = 'engineering@aitomatic.com'},
]

license = {file = 'LICENSE'}


# PYTHON VERSION REQUIREMENT
# ==========================

requires-python = '>= 3.11'


# DYNAMIC METADATA
# ================

dynamic = [
  # version
  'version',

  # description
  'description',

  # dependencies
  'dependencies',
  'optional-dependencies',

  # entry points / scripts
  'entry-points',
  'scripts',
]


# URLs
# ====

[project.urls]
Homepage = 'https://GitHub.com/Aitomatic/Contrib'
Repository = 'https://GitHub.com/Aitomatic/Contrib'
GitHub = 'https://GitHub.com/Aitomatic/Contrib'
Documentation = 'https://GitHub.com/Aitomatic/Contrib'


# SETUPTOOLS-SPECIFIC CONFIG
# ==========================
# setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration

[tool.setuptools]

# platforms = []  # array

zip-safe = true

# eager-resources = []  # array

py-modules = []

# packages = []  # array or find directive

# package-dir = {}  # table/inline-table, used when explicitly listing packages

# namespace-packages = []  # array, deprecated

package-data = {}  # table/inline-table

include-package-data = true

exclude-package-data = {}  # table/inline-table

license-files = ['LICEN[CS]E*']  # array of glob patterns

data-files = {}  # table/inline-table, discouraged

# script-files = []  # array, deprecated

provides = []  # array, ignored by pip

obsoletes = []  # array, ignored by pip


[tool.setuptools.packages.find]
where = ['src']
include = ['*']
exclude = []
namespaces = true


[tool.setuptools.dynamic]

# version
version = {file = 'metadata/version'}

# description
description = {file = 'metadata/description'}

# dependencies
dependencies = {file = 'metadata/requirements/base.txt'}

# entry points / scripts
entry-points = {file = 'metadata/entry-points'}

# optional depedendencies
[tool.setuptools.dynamic.optional-dependencies]
build = {file = 'metadata/requirements/build.txt'}
dev = {file = 'metadata/requirements/dev.txt'}
doc = {file = 'metadata/requirements/doc.txt'}
lint = {file = 'metadata/requirements/lint.txt'}
publish = {file = 'metadata/requirements/publish.txt'}
test = {file = 'metadata/requirements/test.txt'}


# BUILD SYSTEM
# (SetUpTools)
# ============

[build-system]
requires = [
  'SetUpTools >= 68.2.2',
  'Wheel >= 0.41.2',
]
build-backend = 'setuptools.build_meta'
